--- a/style.css
+++ b/style.css
@@ -20,16 +20,52 @@ a {
     text-decoration: none;
     color: white;
 }
+.hero {
+    display: flex;
+    flex-direction: column;
+    background: #1F2937;
+    padding: 16px 100px;
+}
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 100px;
-    background: #1F2937;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .header-links {
     display: flex;
     gap: 16px;
+}
+
+.banner {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    color: white;
+    margin-top: 50px;
+}
+
+img {
+    flex: 0 0 auto;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight:bolder;
+}
+
+button {
+    color: white;
+    background-color: #3882F6;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 16px;
+}
+
+button:hover {
+    background-color: #2b6fdb;
 }
