--- a/style.css
+++ b/style.css
@@ -46,10 +46,7 @@ a {
     align-items: flex-start;
     color: white;
     margin-top: 50px;
-}
-
-img {
-    flex: 0 0 auto;
+    gap: 16px;
 }
 
 h1 {
@@ -68,4 +65,40 @@ button {
 
 button:hover {
     background-color: #2b6fdb;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    text-align: center;
+}
+
+.carousel-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 16px;
+    padding: 16px 100px;
+}
+
+.carousel {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+
+.carousel-img {
+    width: 200px;
+    object-fit: cover;
+    aspect-ratio: 4/3;
+    border-radius: 5px;
+    border: 2px solid #3882F6;
+}
+
+.carousel-text {
+    font-size: 18px;
+    width: 200px;
+    text-align: center;
 }
