--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+}
+
+.main-section {
+    padding: 50px 100px;
 }
 
 ul {
@@ -24,7 +28,6 @@ a {
     display: flex;
     flex-direction: column;
     background: #1F2937;
-    padding: 16px 100px;
 }
 
 .header {
@@ -79,7 +82,6 @@ h2 {
     flex-direction: column;
     justify-content: center;
     gap: 16px;
-    padding: 16px 100px;
 }
 
 .carousel {
@@ -101,4 +103,19 @@ h2 {
     font-size: 18px;
     width: 200px;
     text-align: center;
+}
+
+.testimonial {
+    background: #E5E7EB;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+}
+
+.quote-text.author {
+    text-align: right;
 }
