--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ button {
     border: none;
     padding: 5px 20px;
     border-radius: 5px;
-    margin-top: 16px;
+    margin: 16px 0px;
 }
 
 button:hover {
@@ -126,7 +126,7 @@ h2 {
 .cta-box {
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     background: #3882F6;
     border-radius: 5px;
     color: white;
@@ -136,4 +136,5 @@ h2 {
 .cta-button {
     border: 2px solid white;
 }
+
 
