--- a/style.css
+++ b/style.css
@@ -137,4 +137,12 @@ h2 {
     border: 2px solid white;
 }
 
+.footer {
+    background: #1F2937;
+    color: #E5E7EB;
+    margin-top: 50px;
+    text-align: center;
+    padding: 20px 0px;
+}
+
 
