--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,13 @@ a {
     gap: 16px;
 }
 
+.banner-image {
+    width: 100%; 
+    max-width: 500px; 
+    min-width: 150px; 
+    height: auto; 
+}
+
 h1 {
     font-size: 48px;
     font-weight:bolder;
